# operations-MCP-W-14

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.yml  llm_core.py  main.py  patches.py  prompts.py  pyproject.toml  setup.sh  telemetry.py  utils.py
config/: agents.yaml  tasks.yaml
crew/: agents.py  crew.py  tasks.py
data/: inventory.csv
data/documents/: product_headphones_x200.txt  product_laptop_pro.txt  return_policy.txt  shipping_policy.txt  ticket_001_damaged_item.txt  ticket_002_wrong_item.txt  ticket_003_late_delivery.txt  ticket_999_injected.txt  vendor_acme_corp.txt
docs/: ai_usage_log.md  business_case_study.md  data_and_examples.md  decision_log.md  reflection.md
server/: mcp_fetch_server.py  mcp_server.py  web_server.py
server/web/: index.css  index.html  index.js
tests/: test_crew.py  test_injection_guard.py  test_tools.py
